; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_mac_esp32.c_emac_esp32_rx_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_mac_esp32.c_emac_esp32_rx_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__*, i32, i64 }
%struct.TYPE_4__ = type { i32 (%struct.TYPE_4__*, i32*, i64)* }

@pdFALSE = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@ETH_MAX_PACKET_SIZE = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @emac_esp32_rx_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emac_esp32_rx_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %3, align 8
  store i32* null, i32** %4, align 8
  store i64 0, i64* %5, align 8
  br label %8

8:                                                ; preds = %1, %51
  %9 = load i32, i32* @pdFALSE, align 4
  %10 = load i32, i32* @portMAX_DELAY, align 4
  %11 = call i32 @ulTaskNotifyTake(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %46, %8
  %13 = load i64, i64* @ETH_MAX_PACKET_SIZE, align 8
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @malloc(i64 %14)
  %16 = inttoptr i64 %15 to i32*
  store i32* %16, i32** %4, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @emac_esp32_receive(i32* %18, i32* %19, i64* %5)
  %21 = load i64, i64* @ESP_OK, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %42

23:                                               ; preds = %12
  %24 = load i64, i64* %5, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %38

26:                                               ; preds = %23
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32 (%struct.TYPE_4__*, i32*, i64)*, i32 (%struct.TYPE_4__*, i32*, i64)** %30, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %33, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = load i64, i64* %5, align 8
  %37 = call i32 %31(%struct.TYPE_4__* %34, i32* %35, i64 %36)
  br label %41

38:                                               ; preds = %23
  %39 = load i32*, i32** %4, align 8
  %40 = call i32 @free(i32* %39)
  br label %41

41:                                               ; preds = %38, %26
  br label %45

42:                                               ; preds = %12
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @free(i32* %43)
  br label %45

45:                                               ; preds = %42, %41
  br label %46

46:                                               ; preds = %45
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 2
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %12, label %51

51:                                               ; preds = %46
  br label %8
}

declare dso_local i32 @ulTaskNotifyTake(i32, i32) #1

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @emac_esp32_receive(i32*, i32*, i64*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
